--- a/invoice3.html
+++ b/invoice3.html
@@ -64,7 +64,7 @@ button{padding:8px 14px;margin:5px;}
   <table id="items">
     <thead>
       <tr>
-        <th>Deskripsi Pekerjaan</th><th>Qty</th><th>Harga</th><th>Total</th>
+        <th>Deskripsi Pekerjaan</th><th>Qty</th><th>Harga</th><th>Total</th><th>keterangan</th>
       </tr>
     </thead>
     <tbody></tbody>
@@ -233,5 +233,6 @@ a.n Roni Wijaya
 </script>
 </body>
 </html>
+
 
 
