--- a/invoice3.html
+++ b/invoice3.html
@@ -1,238 +1,327 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Invoice PT Wijaya Anugrah Teknik</title>
+<meta charset="UTF-8">
+<title>Invoice & Laporan AC</title>
 
 <style>
-:root{
-  --biru:#0b5ed7;
-  --kuning:#ffc107;
-}
-body{font-family:Arial,sans-serif;background:#f2f2f2;padding:20px;}
-.invoice{background:#fff;max-width:960px;margin:auto;padding:30px;position:relative;border-top:8px solid var(--biru);}
-.watermark{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%) rotate(-30deg);font-size:44px;font-weight:bold;color:rgba(0,0,0,.06);text-align:center;pointer-events:none;user-select:none;}
-.kop{display:flex;align-items:center;border-bottom:4px solid var(--kuning);padding-bottom:15px;}
-.kop img{width:110px;margin-right:15px;}
-.kop h2{margin:0;color:var(--biru);}
-.kop small{font-size:13px;}
-table{width:100%;border-collapse:collapse;margin-top:15px;}
-th,td{border:1px solid #000;padding:7px;}
-th{background:var(--biru);color:#fff;}
-input,textarea{width:100%;border:1px solid #ccc;padding:6px;}
-.total{text-align:right;font-size:20px;font-weight:bold;color:var(--biru);margin-top:15px;}
-.footer{margin-top:25px;font-size:13px;}
-.ttd{margin-top:40px;text-align:right;}
-button{padding:8px 14px;margin:5px;}
+@page{size:A4;margin:25mm 20mm 20mm 20mm}
+body{font-family:Arial,Helvetica,sans-serif;background:#f4f6f8}
+
+/* HEADER */
+.print-header{
+position:fixed;top:0;left:0;right:0;height:110px;
+padding:10px 20px;background:#fff;
+border-bottom:3px solid #0d6efd;z-index:1000}
+.header-inner{display:flex;justify-content:space-between;align-items:center}
+.header-inner img{height:70px}
+.company{text-align:right}
+.company h2{margin:0;color:#0d6efd}
+.company p{margin:2px 0;font-size:12px}
+
+/* DOCUMENT */
+.document{
+width:210mm;margin:auto;background:#fff;
+padding:140px 20px 20px 20px}
+
+/* WATERMARK */
+.watermark{
+position:fixed;top:50%;left:50%;
+transform:translate(-50%,-50%) rotate(-30deg);
+font-size:60px;font-weight:bold;
+color:rgba(0,102,204,0.08);
+pointer-events:none}
+
+/* GENERAL */
+h3{text-align:center;margin:15px 0}
+.info{display:flex;justify-content:space-between;font-size:12px}
+table{width:100%;border-collapse:collapse;font-size:12px;margin-top:10px}
+table,th,td{border:1px solid #ccc}
+th{background:#0d6efd;color:#fff;padding:6px}
+td{padding:5px;text-align:center}
+input,textarea{width:100%;border:none}
+textarea{border:1px solid #ccc;padding:5px}
+input:focus,textarea:focus{outline:none}
+
+/* TOTAL */
+.totals{width:45%;margin-left:auto;margin-top:15px}
+.totals td{text-align:right}
+
+/* FOTO */
+.photo-grid{
+display:grid;
+grid-template-columns:repeat(2,1fr);
+gap:10px;margin-top:10px}
+.photo-grid img{
+width:100%;height:auto;object-fit:contain;
+border:1px solid #ccc;padding:4px;background:#fff}
+
+/* PAYMENT */
+.payment{
+display:flex;justify-content:space-between;
+font-size:12px;margin-top:20px}
+.qris img{
+max-width:130px;border:1px solid #ccc;padding:5px}
+
+/* GARANSI */
+.warranty{
+margin-top:15px;
+padding:10px;
+border:1px dashed #0d6efd;
+font-size:12px;
+background:#f8fbff}
+
+/* SIGNATURE */
+.signature{
+width:40%;margin-left:auto;margin-top:40px;
+text-align:center;font-size:12px}
+.signature .line{
+margin-top:60px;border-top:1px solid #000}
+
+/* ACTION */
+.actions{text-align:center;margin-top:20px}
+button{
+padding:7px 12px;border:none;
+background:#0d6efd;color:#fff;
+cursor:pointer;margin:4px}
+
 @media print{
-  body{background:#fff;}
-  button{display:none;}
-  input,textarea{border:none;padding:0;font-size:13px;resize:none;}
+.actions{display:none}
+body{background:none}
+.photo-grid img{max-height:160px;page-break-inside:avoid}
 }
 </style>
 </head>
 
 <body>
-<div class="invoice">
-  <div class="watermark">PT WIJAYA ANUGRAH TEKNIK<br/>OFFICIAL INVOICE</div>
 
-  <!-- KOP -->
-  <div class="kop">
-    <img src="logo.png" />
-    <div>
-      <h2>PT WIJAYA ANUGRAH TEKNIK</h2>
-      <small>Spesialis Sistem Pendingin<br/>(Perbaikan, Perawatan, Pengadaan Unit)</small>
-    </div>
-  </div>
+<!-- HEADER -->
+<div class="print-header">
+<div class="header-inner">
+<img src="logo.png">
+<div class="company">
+<h2>PT WIJAYA ANUGRAH TEKNIK</h2>
+<p><b>Spesialis Sistem Pendingin</b></p>
+<p>Perbaikan • Perawatan • Pengadaan Unit</p>
+<p style="font-size:11px">
+JL. H Rean Benda Baru Pamulang, Tangerang Selatan<br>
+Telp / WA : 0811-8011-436
+</p>
+</div>
+</div>
+</div>
 
-  <h3 style="text-align:center;">INVOICE & LAPORAN PEKERJAAN</h3>
+<div class="watermark">PT WIJAYA ANUGRAH TEKNIK</div>
 
-  <!-- INFO -->
-  <table>
-    <tr>
-      <td>No Invoice</td><td id="noInv"></td>
-      <td>Tanggal</td><td id="tgl"></td>
-    </tr>
-    <tr>
-      <td>Pelanggan</td><td><input id="pelanggan" /></td>
-      <td>No HP</td><td><input id="hp" type="tel" placeholder="08xxxxxxxxxx" /></td>
-    </tr>
-  </table>
+<div class="document">
 
-  <!-- ITEM -->
-  <table id="items">
-    <thead>
-      <tr>
-        <th>Deskripsi Pekerjaan</th><th>Qty</th><th>Harga</th><th>Total</th><th>keterangan</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-  <button onclick="tambahItem()">+ Tambah Item</button>
+<!-- INFO -->
+<div class="info">
+<div>
+Nama Customer:<br><input id="custName"><br>
+Alamat:<br><input id="custAddr"><br>
+No. Telp:<br><input id="custPhone">
+</div>
+<div>
+No Invoice: <b id="invoiceNo"></b><br>
+Tanggal Service:<br>
+<input type="date" id="tanggal">
+</div>
+</div>
 
-  <div class="total">TOTAL TAGIHAN: Rp <span id="grand">0</span></div>
+<!-- LAPORAN -->
+<h3>LAPORAN PEKERJAAN UNIT AC</h3>
+<table id="laporan">
+<thead>
+<tr>
+<th>Lokasi</th><th>Merk</th>
+<th>Freon Sblm</th><th>Freon Ssdh</th>
+<th>Amp Sblm</th><th>Amp Ssdh</th><th>keterangan</th>
+</tr>
+</thead>
+<tbody></tbody>
+</table>
+<button onclick="addLaporan()">+ Tambah Unit AC</button>
 
-  <!-- REPORT AC -->
-  <h3 style="margin-top:30px;color:var(--biru);">REPORT HASIL PENGERJAAN AC</h3>
-  <table id="reportAC">
-    <thead>
-      <tr>
-        <th>Lokasi AC</th><th>Freon Sebelum</th><th>Freon Sesudah</th>
-        <th>Ampere Sebelum</th><th>Ampere Sesudah</th><th>Aksi</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-  <button onclick="tambahReport()">+ Tambah Unit AC</button>
+<!-- FOTO -->
+<h3>LAMPIRAN FOTO PEKERJAAN</h3>
+<input type="file" multiple accept="image/*" onchange="previewFoto(this)">
+<div class="photo-grid" id="photoPreview"></div>
 
-  <!-- CATATAN -->
-  <h3 style="margin-top:30px;color:var(--biru);">CATATAN UNTUK CUSTOMER</h3>
-  <textarea id="catatan" rows="4" placeholder="Contoh: Disarankan service rutin setiap 3 bulan."></textarea>
+<!-- INVOICE -->
+<h3>RINCIAN INVOICE</h3>
+<table id="items">
+<thead>
+<tr>
+<th>Deskripsi</th><th>Qty</th><th>Harga</th><th>Subtotal</th><th>keterangan</th>
+</tr>
+</thead>
+<tbody></tbody>
+</table>
+<button onclick="addItem()">+ Tambah Item</button>
 
-  <!-- PEMBAYARAN -->
-  <div class="footer">
-    <b>Pembayaran:</b><br/>
-    Transfer Bank BCA<br/>
-    No Rek: <b>2190116851</b><br/>
-    a.n <b>Roni Wijaya</b>
-  </div>
+<table class="totals">
+<tr><td>Subtotal</td><td id="subTotal">0</td></tr>
+<tr><td>Diskon</td><td><input id="diskon" value="0" oninput="calculate()"></td></tr>
+<tr>
+<td><label><input type="checkbox" id="ppnCheck" onchange="calculate()"> PPN 11%</label></td>
+<td id="ppnValue">0</td>
+</tr>
+<tr><td><b>Grand Total</b></td><td><b id="grandTotal">0</b></td></tr>
+</table>
 
-  <!-- GARANSI -->
-  <div class="footer">
-    <b>Catatan Garansi:</b><br/>
-    • Garansi jasa service 14 hari<br/>
-    • Garansi material 30 hari
-  </div>
+<div style="font-size:12px;margin-top:10px">
+<b>Terbilang:</b> <span id="terbilang"></span>
+</div>
 
-  <!-- TTD -->
-  <div class="ttd">
-    Hormat Kami,<br/><br/><br/>
-    <b>(Tanda Tangan Digital)</b><br/>Manager Finance
-  </div>
+<!-- CATATAN -->
+<div style="font-size:12px;margin-top:10px">
+<b>Catatan:</b>
+<textarea id="catatan" rows="3"></textarea>
+</div>
 
-  <!-- ALAMAT -->
-  <div class="footer">
-    <hr/>
-    <b>Office:</b> Jl. H. Rean, Benda Baru, Pamulang, Tangerang Selatan<br/>
-    <b>Gudang:</b> Perumahan Britania Hills Lite Blok N7, Rawakalong, Bogor, Jawa Barat<br/>
-    <b>Telp:</b> 0811-8011-436
-  </div>
+<!-- PAYMENT -->
+<div class="payment">
+<div>
+<b>Pembayaran:</b><br><br>
+Transfer Bank BCA<br>
+No. Rek : <b>2190116851</b><br>
+A.N : <b>Roni Wijaya</b>
+</div>
+<div class="qris">
+<b>QRIS</b><br><br>
+<img src="qris.jpg">
+</div>
+</div>
 
-  <div style="text-align:center;">
-    <button onclick="window.print()">Simpan PDF</button>
-    <button onclick="kirimWA()">Kirim WhatsApp</button>
-    <button onclick="rekapBulanan()">Rekap Bulanan</button>
-  </div>
+<!-- GARANSI -->
+<div class="warranty">
+<b>Keterangan Garansi:</b><br>
+• Garansi material <b>30 hari</b> sejak tanggal service<br>
+• Garansi jasa <b>14 hari</b> sejak tanggal service
+</div>
+
+<!-- SIGNATURE -->
+<div class="signature">
+Hormat Kami,<br>
+<b>PT WIJAYA ANUGRAH TEKNIK</b>
+<div class="line"></div>
+<b>Bani Wijaya</b><br>
+Manager Finance
+</div>
+
+<div class="actions">
+<button onclick="saveRekap()">💾 Simpan Rekap</button>
+<button onclick="cekRekapBulanan()">📊 Cek Rekapan Bulanan</button>
+<button onclick="window.print()">🖨 Print / PDF</button>
+</div>
+
 </div>
 
 <script>
-/* ===== INVOICE OTOMATIS ===== */
-const d=new Date();
-const key=d.toISOString().split("T")[0];
-document.getElementById("tgl").innerText=key;
-let n=localStorage.getItem("INV_"+key); n=n?parseInt(n)+1:1; localStorage.setItem("INV_"+key,n);
-const noInv=String(n).padStart(3,"0")+"/INV/WAT/"+String(d.getMonth()+1).padStart(2,"0")+"/"+d.getFullYear();
-document.getElementById("noInv").innerText=noInv;
+/* INVOICE NO */
+(function(){
+let d=new Date(),mm=String(d.getMonth()+1).padStart(2,'0'),yy=d.getFullYear();
+let k="INV_"+mm+yy,n=localStorage.getItem(k)||0;
+n++;localStorage.setItem(k,n);
+invoiceNo.innerText=String(n).padStart(3,"0")+"/INV/WAT/"+mm+"/"+yy;
+tanggal.valueAsDate=new Date();
+})();
 
-/* ===== ITEM ===== */
-function tambahItem(){
-  const tr=document.createElement("tr");
-  tr.innerHTML=`<td><input></td><td><input type="number" value="1"></td>
-  <td><input type="number" value="0"></td><td class="line">0</td>
-  <td><button onclick="this.closest('tr').remove();hitung()">✔️</button></td>`;
-  document.querySelector("#items tbody").appendChild(tr);
+/* LAPORAN */
+function addLaporan(){
+let r=document.createElement("tr");
+r.innerHTML=`
+<td><input></td><td><input></td>
+<td><input></td><td><input></td>
+<td><input></td><td><input></td>
+<td><button onclick="this.closest('tr').remove()">✔️</button></td>`;
+laporan.querySelector("tbody").appendChild(r);
 }
-tambahItem();
+addLaporan();
 
-function hitung(){
-  let total=0;
-  document.querySelectorAll("#items tbody tr").forEach(r=>{
-    const q=+r.children[1].children[0].value||0;
-    const h=+r.children[2].children[0].value||0;
-    const t=q*h; r.querySelector(".line").innerText=t; total+=t;
-  });
-  document.getElementById("grand").innerText=total;
+/* ITEM */
+function addItem(){
+let r=document.createElement("tr");
+r.innerHTML=`
+<td><input></td>
+<td><input type="number" value="1" oninput="calculate()"></td>
+<td><input type="number" value="0" oninput="calculate()"></td>
+<td class="rowTotal">0</td>
+<td><button onclick="this.closest('tr').remove();calculate()">✔️</button></td>`;
+items.querySelector("tbody").appendChild(r);
 }
-document.addEventListener("input",hitung);
+addItem();
 
-/* ===== REPORT AC ===== */
-function tambahReport(){
-  const tr=document.createElement("tr");
-  tr.innerHTML=`<td><input></td><td><input></td><td><input></td>
-  <td><input></td><td><input></td>
-  <td><button onclick="this.closest('tr').remove()">✔️</button></td>`;
-  document.querySelector("#reportAC tbody").appendChild(tr);
-}
-tambahReport();
-
-/* ===== SIMPAN REKAP ===== */
-function simpanRekap(){
-  let data=JSON.parse(localStorage.getItem("REKAP_INVOICE")||"[]");
-  data.push({tanggal:key,bulan:key.slice(0,7),invoice:noInv,total:+grand.innerText});
-  localStorage.setItem("REKAP_INVOICE",JSON.stringify(data));
-}
-
-/* ===== REKAP BULANAN ===== */
-function rekapBulanan(){
-  let data=JSON.parse(localStorage.getItem("REKAP_INVOICE")||"[]");
-  if(!data.length){alert("Belum ada data.");return;}
-  let map={};
-  data.forEach(d=>{
-    map[d.bulan]=map[d.bulan]||{jumlah:0,total:0};
-    map[d.bulan].jumlah++; map[d.bulan].total+=d.total;
-  });
-  let out="REKAP PENDAPATAN BULANAN\n\n";
-  Object.keys(map).sort().forEach(b=>{
-    out+=`Bulan: ${b}\nJumlah Invoice: ${map[b].jumlah}\nTotal: Rp ${map[b].total}\n\n`;
-  });
-  alert(out);
+/* HITUNG */
+function calculate(){
+let sub=0;
+document.querySelectorAll("#items tbody tr").forEach(r=>{
+let q=r.children[1].children[0].value;
+let p=r.children[2].children[0].value;
+let t=q*p;
+r.querySelector(".rowTotal").innerText=t.toLocaleString("id-ID");
+sub+=t;
+});
+subTotal.innerText=sub.toLocaleString("id-ID");
+let d=parseInt(diskon.value||0);
+let ppn=ppnCheck.checked?sub*0.11:0;
+ppnValue.innerText=ppn.toLocaleString("id-ID");
+let g=sub-d+ppn;
+grandTotal.innerText=g.toLocaleString("id-ID");
+terbilang.innerText=terbilangFn(Math.round(g))+" rupiah";
 }
 
-/* ===== WHATSAPP (RINCIAN + REKENING) ===== */
-function kirimWA(){
-  simpanRekap();
-  let pesan=
-`INVOICE RESMI
-PT WIJAYA ANUGRAH TEKNIK
+/* FOTO */
+function previewFoto(input){
+let wrap=document.getElementById("photoPreview");
+wrap.innerHTML="";
+[...input.files].forEach(f=>{
+let img=document.createElement("img");
+img.src=URL.createObjectURL(f);
+wrap.appendChild(img);
+});
+}
 
-No Invoice : ${noInv}
-Tanggal    : ${key}
-Pelanggan  : ${pelanggan.value}
+/* SIMPAN REKAP */
+function saveRekap(){
+let data=JSON.parse(localStorage.getItem("REKAP")||"[]");
+data.push({
+tanggal:tanggal.value,
+total:parseInt(grandTotal.innerText.replace(/\D/g,""))||0
+});
+localStorage.setItem("REKAP",JSON.stringify(data));
+alert("Rekap tersimpan");
+}
 
-RINCIAN PEKERJAAN:
-`;
-  let i=1;
-  document.querySelectorAll("#items tbody tr").forEach(r=>{
-    const d=r.children[0].children[0].value;
-    const q=r.children[1].children[0].value;
-    const h=r.children[2].children[0].value;
-    const t=r.children[3].innerText;
-    if(d){pesan+=`${i}. ${d}\n   Qty ${q} x Rp ${h} = Rp ${t}\n`; i++;}
-  });
-  pesan+=`\nTOTAL TAGIHAN : Rp ${grand.innerText}\n\nREPORT HASIL PEKERJAAN AC:\n`;
-  document.querySelectorAll("#reportAC tbody tr").forEach(r=>{
-    const l=r.children[0].children[0].value;
-    const f1=r.children[1].children[0].value;
-    const f2=r.children[2].children[0].value;
-    const a1=r.children[3].children[0].value;
-    const a2=r.children[4].children[0].value;
-    if(l){pesan+=`- ${l} | Freon ${f1} → ${f2} PSI | Ampere ${a1} → ${a2} A\n`;}
-  });
-  pesan+=`
-INFORMASI PEMBAYARAN:
-Bank BCA
-No Rekening : 2190116851
-a.n Roni Wijaya
-`;
-  if(catatan.value){pesan+=`\nCatatan:\n${catatan.value}\n`;}
-  pesan+=`\nTerima kasih\nPT WIJAYA ANUGRAH TEKNIK`;
-  const nomor=hp.value.replace(/^0/,"62");
-  window.open("https://wa.me/"+nomor+"?text="+encodeURIComponent(pesan),"_blank");
+/* CEK REKAP BULANAN */
+function cekRekapBulanan(){
+let data=JSON.parse(localStorage.getItem("REKAP")||"[]");
+if(data.length===0){alert("Belum ada data");return;}
+let n=new Date(),m=n.getMonth(),y=n.getFullYear(),t=0;
+data.forEach(r=>{
+let d=new Date(r.tanggal);
+if(d.getMonth()===m && d.getFullYear()===y){t+=r.total;}
+});
+let bln=["Januari","Februari","Maret","April","Mei","Juni",
+"Juli","Agustus","September","Oktober","November","Desember"];
+alert("📊 REKAP PENDAPATAN\n\nBulan: "+bln[m]+" "+y+
+"\nTotal: Rp "+t.toLocaleString("id-ID"));
+}
+
+/* TERBILANG */
+function terbilangFn(n){
+const s=["","satu","dua","tiga","empat","lima","enam","tujuh","delapan","sembilan","sepuluh","sebelas"];
+if(n<12)return s[n];
+if(n<20)return s[n-10]+" belas";
+if(n<100)return s[Math.floor(n/10)]+" puluh "+s[n%10];
+if(n<200)return "seratus "+terbilangFn(n-100);
+if(n<1000)return s[Math.floor(n/100)]+" ratus "+terbilangFn(n%100);
+if(n<2000)return "seribu "+terbilangFn(n-1000);
+if(n<1000000)return terbilangFn(Math.floor(n/1000))+" ribu "+terbilangFn(n%1000);
+return "";
 }
 </script>
+
 </body>
 </html>
-
-
-
